--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "react_boiler_plate",
+  "name": "Autocomplete-Dropdown-Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.13",
     "cypress": "^7.5.0"
   }
 }
